# serializer version: 1
# name: TestEDuke32Generator.test_generate
  tuple(
    list([
      'eduke32',
      '-cfg',
      '/userdata/system/configs/eduke32/eduke32.cfg',
      '',
      '-gamegrp',
      '/userdata/roms/eduke32/duke/DUKE3D.GRP',
      '-g',
      '/userdata/roms/eduke32/duke/duke3d_hrp.zip',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
    }),
  )
# ---
# name: TestEDuke32Generator.test_generate[config]
  '''
  [Screen Setup]
  ScreenWidth = 1920
  ScreenHeight = 1080
  ScreenMode = 1
  
  
  '''
# ---
# name: TestEDuke32Generator.test_generate[script]
  '''
  // This file is automatically generated by eduke32Generator.py
  bind "F12" "screenshot"
  screenshot_dir "/userdata/screenshots"
  r_showfps "0"
  echo BATOCERA
  
  '''
# ---
# name: TestEDuke32Generator.test_generate_config[{'nologo': '1'}]
  tuple(
    list([
      'eduke32',
      '-cfg',
      '/userdata/system/configs/eduke32/eduke32.cfg',
      '-nologo',
      '-gamegrp',
      '/userdata/roms/eduke32/duke/DUKE3D.GRP',
      '-g',
      '/userdata/roms/eduke32/duke/duke3d_hrp.zip',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
    }),
  )
# ---
# name: TestEDuke32Generator.test_generate_config[{'nologo': '1'}][script]
  '''
  // This file is automatically generated by eduke32Generator.py
  bind "F12" "screenshot"
  screenshot_dir "/userdata/screenshots"
  r_showfps "0"
  echo BATOCERA
  
  '''
# ---
# name: TestEDuke32Generator.test_generate_config[{'showFPS': 'true'}]
  tuple(
    list([
      'eduke32',
      '-cfg',
      '/userdata/system/configs/eduke32/eduke32.cfg',
      '',
      '-gamegrp',
      '/userdata/roms/eduke32/duke/DUKE3D.GRP',
      '-g',
      '/userdata/roms/eduke32/duke/duke3d_hrp.zip',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
    }),
  )
# ---
# name: TestEDuke32Generator.test_generate_config[{'showFPS': 'true'}][script]
  '''
  // This file is automatically generated by eduke32Generator.py
  bind "F12" "screenshot"
  screenshot_dir "/userdata/screenshots"
  r_showfps "1"
  echo BATOCERA
  
  '''
# ---
# name: TestEDuke32Generator.test_generate_existing[config]
  '''
  [Screen Setup]
  ScreenWidth = 1920
  ScreenHeight = 1080
  ScreenMode = 1
  Foo = 3
  
  
  '''
# ---
# name: TestEDuke32Generator.test_generate_fury
  tuple(
    list([
      'fury',
      '-cfg',
      '/userdata/system/configs/fury/fury.cfg',
      '',
      '-gamegrp',
      'rom.grp',
      '-j',
      '/userdata/roms/fury',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
    }),
  )
# ---
# name: TestEDuke32Generator.test_generate_fury[config]
  '''
  [Screen Setup]
  ScreenWidth = 1920
  ScreenHeight = 1080
  ScreenMode = 1
  
  
  '''
# ---
# name: TestEDuke32Generator.test_generate_fury[script]
  '''
  // This file is automatically generated by eduke32Generator.py
  bind "F12" "screenshot"
  screenshot_dir "/userdata/screenshots"
  r_showfps "0"
  echo BATOCERA
  
  '''
# ---
# name: TestEDuke32Generator.test_get_hotkeys_context
  dict({
    'keys': dict({
      'exit': 'killall -9 eduke32; killall -9 fury',
      'menu': 'KEY_ESC',
      'pause': 'KEY_ESC',
      'restore_state': 'KEY_F9',
      'save_state': 'KEY_F6',
    }),
    'name': 'eduke32',
  })
# ---
